[package]
name = "db-press-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
diesel = { version = "2.1.5", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
